// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute mintable endpoint should block overmint 1`] = `
{
  "data": {
    "latestBlocks": {
      "1": 5,
    },
    "mintables": {
      "1": {
        "block": 6,
        "mintable": "0",
        "mintablePacked": "0",
        "nativeMint": "15",
        "totalAborts": "13",
      },
    },
    "overmint": true,
    "reserveInfo": {
      "reserveAmount": "1000000000000000000",
      "ripcord": false,
      "timestamp": 2,
    },
    "supplyDetails": {
      "chains": {
        "1": {
          "aggregate_mint_request": true,
          "aggregate_native_mint": false,
          "block_finality": "0",
          "latest_block": 5,
          "mintable": "8",
          "request_block": 7,
          "response_block": 6,
          "token_attest_mint": "14",
          "token_ccip_burn": "11",
          "token_ccip_mint": "10",
          "token_native_mint": "15",
          "token_request_mint": "12",
          "token_revert_mint": "13",
          "token_supply": "9",
        },
      },
      "mintable": "500000000000000001",
      "supply": "500000000000000000",
    },
  },
  "result": 0,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute mintable endpoint should handle error 1`] = `
{
  "data": {
    "latestBlocks": {
      "1": 5,
    },
    "mintables": {},
    "overmint": false,
    "reserveInfo": {
      "reserveAmount": "1000000000000000000",
      "ripcord": false,
      "timestamp": 2,
    },
    "supplyDetails": {
      "chains": {
        "1": {
          "error_message": "some error messages",
          "latest_block": 5,
        },
      },
    },
  },
  "result": 0,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute mintable endpoint should return success 1`] = `
{
  "data": {
    "latestBlocks": {
      "1": 5,
    },
    "mintables": {
      "1": {
        "block": 6,
        "mintable": "8",
        "mintablePacked": "36",
        "nativeMint": "15",
        "totalAborts": "13",
      },
    },
    "overmint": false,
    "reserveInfo": {
      "reserveAmount": "1000000000000000000",
      "ripcord": false,
      "timestamp": 2,
    },
    "supplyDetails": {
      "chains": {
        "1": {
          "aggregate_mint_request": true,
          "aggregate_native_mint": false,
          "block_finality": "finalized",
          "latest_block": 5,
          "mintable": "8",
          "request_block": 7,
          "response_block": 6,
          "token_attest_mint": "14",
          "token_ccip_burn": "11",
          "token_ccip_mint": "10",
          "token_native_mint": "15",
          "token_request_mint": "12",
          "token_revert_mint": "13",
          "token_supply": "9",
        },
      },
      "mintable": "4",
      "supply": "3",
    },
  },
  "result": 0,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;
